--- a/app/index.html
+++ b/app/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html dir="ltr">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Rast</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link
+      href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic"
+      rel="stylesheet" type="text/css"/>
 
     {{content-for 'head'}}
 
@@ -14,7 +17,8 @@
 
     {{content-for 'head-footer'}}
   </head>
-  <body>
+
+  <body class="no-transition">
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
