--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
-      href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700|Raleway:300,400,500,600,700|Crete+Round:400italic"
+      href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700&subset=latin-ext|Raleway:300,400,500,600,700|Crete+Round:400italic&subset=latin-ext"
       rel="stylesheet" type="text/css"/>
 
     {{content-for 'head'}}
@@ -18,7 +18,7 @@
     {{content-for 'head-footer'}}
   </head>
 
-  <body class="no-transition">
+  <body class="no-transition dark">
     {{content-for 'body'}}
 
     <script src="assets/vendor.js"></script>
