--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
-      href="http://fonts.googleapis.com/css?family=Lato:300,400,400italic,600,700&subset=latin-ext|Raleway:300,400,500,600,700|Crete+Round:400italic&subset=latin-ext"
+      href="https://fonts.googleapis.com/css?family=Crete+Round:400italic|Lato:400,300,400italic,700|Raleway&subset=latin-ext"
       rel="stylesheet" type="text/css"/>
 
     {{content-for 'head'}}
